<resources>
    <string name="app_name">City Visitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_monument">"Nie możesz znaleźć interesującego zabytku?\nDaj znać o tym!"
    </string>
    <string name="application_submitted">Wysłano zawartę przez Ciebie informacje do systemu!</string>
    <string name="monument_search">Wyszukiwanie zabytków</string>
    <string name="monument_add">Dodaj brakujące miejsca</string>
    <string name="city_visitor_are">Co to City Visitor?</string>
    <string name="app_description_long">GDGs are local groups of developers who are specifically interested in Google
        products and APIs. Each local group is called a GDG chapter and can host a variety of technical activities for
        developers - from just a few people getting together to watch our latest videos, to large gatherings with demos
        and tech talks, to hackathons. Google Developers supports and recognizes GDG chapters, but doesn’t own or manage
        them.
    </string>
    <string name="about_city_visitor_developer">About City Visitor developers</string>
    <string name="city_visitor_developer_about">️tekscik\n o super devie Tomaszu \n
        ️Oraz innych ciekawych rzeczach w apce \n
        a wszystko w polskim języku
    </string>
    <string name="waiting_for_location_and_network">Oczekiwanie na informacje o lokalizacji i połączeniu internetowym\n\n
        Na wszelki wypadek uruchom lokalizacje z poziomu aplikacji google maps.
    </string>
    <string name="waiting_for_gps_and_network_or_informations">
        Oczekiwanie na informacje o lokalizacji i połączeniu internetowym\n
        Na wszelki wypadek uruchom lokalizacje z poziomu aplikacji google maps.\n\n
        W przeciwnym wypadku, Twoja lista ulubionych zabytków jest pusta.\n
        Znajdź coś dla siebie :)
    </string>
    <string name="stage_image_description">Photo from city</string>
    <string name="submit_button_description">Button to submit form</string>
    <string name="form_name_description">enter your name</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="monument_name_label">monument name</string>
    <string name="description_label">description</string>
    <string name="category_label">category</string>
    <string name="website_link_label">website link</string>
    <string name="rate_label">rate</string>
    <string name="enter_lat">enter latitude</string>
    <string name="enter_lng">enter longitude</string>
    <string name="submitted">Submitted, no need to submit again</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="description_text">Rating:</string>
    <string name="monument_add_label">Dodaj zabytek</string>
    <string name="favourite_monuments">Ulubione zabytki</string>
</resources>