<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.example.android.cityvisitor.add.AddMonumentViewModel"/>
    </data>
    <ScrollView android:layout_height="match_parent"
                android:layout_width="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".add.AddMonumentFragment">

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_monument"
                android:text="@string/add_monument"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="411dp"
                android:layout_height="210dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/stage_image_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/EditTextNameMonument"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIntro"
                app:srcCompat="@drawable/behind"
                tools:src="@tools:sample/avatars" />

            <EditText
                    android:id="@+id/EditTextNameMonument"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:hint="@string/monument_name_label"
                    android:text="@={viewModel.name}"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/EditTextInfo"
                    android:singleLine="true"/>

            <EditText
                    android:id="@+id/EditTextInfo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:hint="@string/description_label"
                    android:text="@={viewModel.description}"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextCategory"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/EditTextCategory"
                    android:singleLine="true"/>
            <EditText
                    android:id="@+id/EditTextCategory"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:hint="@string/category_label"
                    android:text="@={viewModel.category}"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/EditTextWebsite"
                    android:layout_marginBottom="4dp"
                    android:singleLine="true"/>
            <EditText
                    android:id="@+id/EditTextWebsite"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/website_link_label"
                    android:text="@={viewModel.url}"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextCategory"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/EditTextRate"
                    android:layout_marginTop="4dp"
                    android:singleLine="true"/>
            <EditText
                    android:id="@+id/EditTextRate"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:hint="@string/rate_label"
                    android:text="@={viewModel.rate}"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextWebsite"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/contentGroup"
                    android:singleLine="true"
                    android:ems="10"
                    android:inputType="numberDecimal"
           />

            <!--wrap in a layout to group-->

            <LinearLayout
                    android:id="@+id/contentGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/EditTextRate"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@+id/EditTextRate"
                    app:layout_constraintEnd_toEndOf="@+id/EditTextRate"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    android:layout_marginBottom="8dp">

                <TextView
                        android:id="@+id/labelTextLat"
                        android:text="@string/latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/latitude"
                        app:layout_constraintTop_toBottomOf="@+id/EditTextRate"
                        app:layout_constraintBottom_toTopOf="@+id/EditTextWhy"
                        app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/EditTextLat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_lat"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@={viewModel.lat}"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextRate" />

                <TextView
                    android:id="@+id/labelTextLng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/longitude"
                    android:text="@string/longitude"
                    app:layout_constraintBottom_toTopOf="@+id/EditTextLat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextRate" />

                <EditText
                    android:id="@+id/EditTextLng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_lng"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text="@={viewModel.lng}"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextRate" />

            </LinearLayout>

            <Button
                    android:id="@+id/button"
                    android:text="@string/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contentGroup"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="40dp"
                    android:onClick="@{() -> viewModel.addMonument()}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
