<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable name="viewModel" type="com.example.android.cityvisitor.home.HomeViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        <androidx.core.widget.NestedScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/spacing_normal"
                    android:clipToPadding="true"
                    tools:context=".home.HomeFragment">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:srcCompat="@drawable/behind"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="4:3"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_city_visitor_developer"
                    android:textAppearance="?textAppearanceHeadline5"
                    app:layout_constraintEnd_toStartOf="@+id/end_grid"
                    app:layout_constraintStart_toStartOf="@+id/start_grid"
                    app:layout_constraintTop_toBottomOf="@id/image" />

                <TextView
                    android:id="@+id/intro_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_description_long"
                    app:layout_constraintEnd_toStartOf="@+id/end_grid"
                    app:layout_constraintStart_toStartOf="@+id/start_grid"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/city_visitor_are"
                        android:layout_marginTop="13dp"
                        android:textAppearance="?textAppearanceHeadline6"
                        app:layout_constraintStart_toEndOf="@id/start_grid"
                        app:layout_constraintEnd_toStartOf="@id/end_grid"
                        app:layout_constraintTop_toBottomOf="@+id/intro_text"/>

                <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/city_visitor_developer_about"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/subtitle"
                        app:layout_constraintStart_toStartOf="@+id/start_grid"
                        app:layout_constraintEnd_toStartOf="@+id/end_grid"/>

                <ImageView
                    android:id="@+id/end_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="3:1.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/people" />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/start_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintGuide_begin="@dimen/spacing_normal"
                        android:orientation="vertical"/>

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/end_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="@dimen/spacing_normal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/spacing_normal"
                android:onClick="@{() -> viewModel.onFabClicked()}"
                app:srcCompat="@drawable/ic_twotone_my_location_24"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>